--- a/attack.tex
+++ b/attack.tex
@@ -4,7 +4,7 @@
 In this section, we introduce the concept of internal attacks in streaming P2P overlays.
 Our focus is on attacks on availability that aim to intercept data chunks from the source. 
 We start by introducing the attack characteristics such as target, budget, and malicious nodes placement. 
-Subsequently, our main discussion outlines the the \drop adversarial behavior. 
+Subsequently, our main discussion outlines the \drop adversarial behavior. 
 
 \subsection{Target, budget and placement}
 
