--- a/analysis.tex
+++ b/analysis.tex
@@ -13,7 +13,7 @@ Similarly, preventing the removal of a malicious headnode requires that a high n
 
 We start by considering the case that malicious nodes want to misuse the detection mechanism to remove a benign headnode. 
 Note that there are reliable methods to identify headnodes~\cite{nguyen2016swap}, so malicious peers are likely to know if one of their neighbors is a headnode.  
-The malicious node $m$ initiating a request with the goal of removing one benign headnode can manipulate the set $D$ of nodes whose satisfaction levels $m$ forwards to the source. 
+The malicious node $m$ initiating a request with the goal of removing one benign headnode can manipulate the set $D$ of nodes $m$ forwards to the source. 
 In other words, after querying all nodes in its actual neighbor list, $m$ might send only  subset of the responses as well as responses from additional nodes to the source. If possible, $m$ chooses these responses in such a manner that the source will remove the benign headnode. 
 There are restrictions guiding the construction of $D$ that $m$ has to take into consideration:
 \begin{itemize}
@@ -43,7 +43,7 @@ c &= \max \Big( 1,  \\
 \end{align}
 \end{proposition}
 \begin{proof}
-To remove the headnode $h$, there has to be a detection request containing the responses of $h$ and $n\geq \minP-1$ nodes with satisfaction levels $s_1, \ldots , s_n$ and 
+To remove a headnode $h$, there has to be a detection request containing the responses of $h$ and $n\geq \minP-1$ nodes with satisfaction levels $s_1, \ldots , s_n$ and 
 $\frac{1}{n+1}\left( s_h + \sum_{i=1}^{n}s_i \right) < \satThres$.
 The node $m$ aims to minimize the number of involved malicious nodes $c$ because each malicious node can only participate in $\kappa$ detection requests per interval. At the same time, $m$ has to ensure that the average satisfaction level of the involved nodes is below $\satThres$ and that the request includes at least $\minP$ nodes in total. As $m$ files the request, at least one malicious node has to be included. 
 In other words, $m$ solves the optimization problem of finding a minimal $c$ and a set of integers $I \subset \{1, \ldots, k\}$ such that i) $c + |I|+1 \geq \minP$, ii) $\frac{1}{c + |I|+1}\left( \sat_h + \sum_{i \in I} sat_i \right) < \satThres$, and iii) $c\geq 1$. 
@@ -55,8 +55,8 @@ If additional malicious headnodes are neighbors of $m$, $m$ does not include the
 
 
 \subsection{Retaining Malicious Headnodes}
-Now, we consider the case that malicious nodes collude to retain one or several malicious headnode when a benign peer initiates a detection request. 
-All malicious nodes in the respective neighbor list will provide a satisfaction level of 1 to prevent the removal of a malicious node. We assume that malicious neighbors will try to prevent the removal of malicious headnodes even if the request can in addition result in the removal of benign headnodes. This assumption seems reasonable as the removal of a benign headnode is unlikely to lead to additional malicious headnodes, indicating that retaining existing malicious headnodes is of higher importance than removing benign headnodes.  Preposition~\ref{prop:dropping-retain} provides the condition governing the success or failure of the \drop request in the face of the proposed adversarial behavior. 
+Now, we consider the case that malicious nodes collude to retain one or several malicious headnodes when a benign peer initiates a detection request. 
+All malicious nodes in the respective neighbor list will provide a satisfaction level of 1 to prevent the removal of a malicious node. We assume that malicious neighbors will try to prevent the removal of malicious headnodes even if the request can additionally result in the removal of benign headnodes. This assumption seems reasonable as the removal of a benign headnode is unlikely to lead to additional malicious headnodes, indicating that retaining existing malicious headnodes is of higher importance than removing benign headnodes.  Preposition~\ref{prop:dropping-retain} provides the condition governing the success or failure of the \drop request in the face of the proposed adversarial behavior. 
 
 \begin{proposition}
 \label{prop:dropping-retain}
@@ -78,5 +78,4 @@ The claim follows directly as all $y$ malicious peers will set their satisfactio
 %Then Proposition~\ref{prop:dropping-retain} indicates a successful removal of malicious nodes unless the satisfaction level of benign peers remains high or the neighborhood of the benign peer contains many malicious peers. 
 
 
- 
  
