--- a/related.tex
+++ b/related.tex
@@ -8,7 +8,7 @@ As the attack strategy differs from the \drop attack and efficient network codin
 % Consequently, researchers have studied them extensively and there exist various detection and mitigation schemes .    
 % As the existing approaches seem to render the attack harmless, we do not focus on it in this work but rather assume that appropriate measures against these attacks such as network coding  are already in place.
 
-In contrast, the main approach to counter free riding are incentives \cite{defending,defending2}, i.e., rewarding peers that distributed the stream to others; 
+In contrast, the main approach to counter free riding are incentives \cite{defending,defending2}, i.e., rewarding peers that distribute the stream to others; 
 % e.g., with an increased flexibility in the neighbor selection or positions closer to the source to receive a better service. 
 % As a consequence, free riders likely end up far from the source, meaning that they are not required to forward the stream anyways, because all their neighbors already requested the chunks from others by the time the free riders receive them. 
 However, these strategies are only effective for peers that aim to minimize their level of participating. 
