--- a/abstract.tex
+++ b/abstract.tex
@@ -1,11 +1,12 @@
 \begin{abstract}
 
-Online streaming is a popular service for data-intensive applications where P2P-based streaming solutions are advocated to help reduce costs for both providers and users.
+Online streaming is a popular service for data-intensive applications such as video streaming.
+P2P-based streaming solutions are advocated to help reduce costs for both providers and users.
 Yet, involving users over data dissemination entails security risks including a variety of denial-of-service attacks. 
 While extensive research exists on mitigating varied attack types, their effectiveness is limited if the attacker can infer information about the topology such as the identity of nodes that have direct connections to the source.  The attacker can then leverage the gained insights to place malicious participants in prominent positions. By dropping chunks that should be forwarded, the malicious peers degrade the performance in a stealthy way that does not raise suspicion. 
 
 We first demonstrate the feasibility of conducting such attacks. 
-Accordingly, we propose a detection/mitigation mechanism that identifies the attack and removes potential malicious peers from their disruptive positions. 
+Accordingly, we propose a detection mechanism that identifies the attack and removes potential malicious peers from their disruptive positions. 
 We ascertain, theoretically and through simulations, that malicious peers cannot misuse the detection mechanism to gain influence. Our simulation-based study indicates that the proposed detection mechanism is able to detect malicious peers with up to 80-90\% accuracy while inducing a small overhead of approximately 8\%.
 
 
